# pa5-rbgale

./: CHANGELOG.md  LICENSE  pa5-rbgale.cabal
app/: Main.hs
src/: Probability.hs  RollingStones.hs
